# SKRoot-linuxKernelRoot

./: CMakeLists.txt  README.md  app.jks
.github/workflows/: PermissionManager.yml  SKRootKernelRoot_Windows.yml  build.yml
PermissionManager/: appKey.jks  gradle.properties  settings.gradle
PermissionManager/app/: appKey.jks  build.gradle
PermissionManager/app/src/main/cpp/: CMakeLists.txt  cJSON.c  cJSON.h  root.cpp  urlEncodeUtils.h
find_kernel_func/: Linux内核源码摘录.cpp
find_kernel_func/find_avc_denied/: find_avc_denied.cpp
find_kernel_func/find_cred_has_capability/: find_cred_has_capability.cpp
find_kernel_func/find_do_execve/: find_do_execve.cpp
find_kernel_func/find_proc_pid_status/: find_proc_pid_status.cpp
find_kernel_func/proc_pid_status/: find_proc_pid_status_key.cpp
patch_kernel_root/: ARM_asm.h  ArmAsmHelper.h  ArmAsmHelper_Linux.h  ArmAsmHelper_Windows.h  analyze_kernel.cpp  analyze_kernel.h  base_func.h  kallsyms_lookup_name.cpp  kallsyms_lookup_name_4_6_0.cpp  kallsyms_lookup_name_6_1_42.cpp  kallsyms_lookup_name_6_1_60.cpp  kallsyms_lookup_name_6_6_30.cpp  kernel_symbol_parser.cpp  kernel_symbol_parser.h  kernel_version_parser.cpp  kernel_version_parser.h  patch_avc_denied.cpp  patch_avc_denied.h  patch_do_execve.cpp  patch_do_execve.h  patch_kernel_root.cpp  patch_kernel_root.h  patch_kernel_root.vcxproj  patch_kernel_root.vcxproj.filters
patch_kernel_root/analyze/: ARM_asm.h  analyze_kernel.cpp  analyze_kernel.h  kallsyms_lookup_name.cpp  kallsyms_lookup_name.h  kallsyms_lookup_name_4_6_0.cpp  kallsyms_lookup_name_4_6_0.h  kallsyms_lookup_name_6_1_42.cpp  kallsyms_lookup_name_6_1_42.h  kallsyms_lookup_name_6_1_60.cpp  kallsyms_lookup_name_6_1_60.h  kallsyms_lookup_name_6_6_30.cpp  kallsyms_lookup_name_6_6_30.h  kernel_symbol_parser.cpp  kernel_symbol_parser.h  kernel_version_parser.cpp  kernel_version_parser.h
su/: base64.cpp  base64.h  log.h  su.cpp  su.h  su.vcxproj  su.vcxproj.filters  su_hide_path_utils.h
su/jni/: Android.mk  Application.mk
suTest/: gradle.properties  local.properties  settings.gradle
suTest/app/: build.gradle
testRoot/: README.md  init64_process_helper.h  kernel_root_helper.h  kernel_root_key.h  main.cpp  maps_helper.h  myself_path_utils.h  process64_inject.cpp  process64_inject.h  process_cmdline_utils.h  ptrace_arm64_utils.cpp  ptrace_arm64_utils.h  random_utils.h  safe_fork_helper.h  so_symbol_parser.h  su_install_helper.cpp  su_install_helper.h  testRoot.cpp  testRoot.h  testRoot.vcxproj  testRoot.vcxproj.filters
testRoot/jni/: Android.mk  Application.mk  generate_source_file_kernel_root_kit_su_exec_data.bat  generate_source_file_lib_root_server_data.bat  generate_source_file_lib_su_env_data.bat  testRoot.cpp  testRoot.h  编译流程.txt
testRoot/kernel_root_kit/: kernel_root_kit_command.h  kernel_root_kit_fork_helper.h  kernel_root_kit_init64_process_helper.h  kernel_root_kit_log.h  kernel_root_kit_maps_helper.h  kernel_root_kit_process64_inject.cpp  kernel_root_kit_process64_inject.h  kernel_root_kit_process_cmdline_utils.h  kernel_root_kit_ptrace_arm64_utils.h  kernel_root_kit_random.h  kernel_root_kit_so_symbol_parser.h  (+3 more)
(+77 files in other folders)
